--- a/photographer_portfolio/src/assets/styles/desktopL.scss
+++ b/photographer_portfolio/src/assets/styles/desktopL.scss
@@ -51,7 +51,7 @@
       '. image greetings .'
       '. image introText .'
       '. . . .';
-    grid-template-columns: 0.1fr 3fr 0.5fr 0.1fr;
+    grid-template-columns: 0.1fr 1.5fr 1fr 0.1fr;
     grid-template-rows: 0.1fr 0.3fr 0.3fr 0.7fr 0.1fr;
     background-color: black;
   }
@@ -71,9 +71,10 @@
       grid-area: greetings;
       text-align: center;
       display: flex;
-      flex-flow: row wrap;
-      margin: 4% 0 0 27%;
-      width: 66vw;
+      flex-flow: row nowrap;
+      justify-content: center;
+      margin: 4% 0 0 3%;
+      width: 100%;
       font-size: 1.8em;
     }
       .kimsName {
