--- a/photographer_portfolio/src/assets/styles/desktopS.scss
+++ b/photographer_portfolio/src/assets/styles/desktopS.scss
@@ -51,7 +51,7 @@
       '. image greetings .'
       '. image introText .'
       '. . . .';
-    grid-template-columns: 0.1fr 3fr 0.5fr 0.1fr;
+    grid-template-columns: 0.1fr 1.5fr 1fr 0.1fr;
     grid-template-rows: 0.1fr 0.3fr 0.3fr 0.7fr 0.1fr;
     background-color: black;
   }
@@ -72,8 +72,8 @@
       text-align: center;
       display: flex;
       flex-flow: row wrap;
-      margin: 4% 0 0 27%;
-      width: 66vw;
+      margin: 4% 0 0 10%;
+      width: 100%;
       font-size: 1.8em;
     }
       .kimsName {
@@ -85,6 +85,7 @@
         grid-area: introText;
         text-align: center;
         font-size: 1.6em;
+        margin-left: 3%;
       }
     .ProjectsBlock {
       width: 100vw;
