--- a/photographer_portfolio/src/assets/styles/tablet.scss
+++ b/photographer_portfolio/src/assets/styles/tablet.scss
@@ -9,6 +9,8 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
   }
   .presentationSection {
     display: grid;
@@ -54,10 +56,12 @@
     grid-template-columns: 0.1fr 1fr 1fr 0.1fr;
     grid-template-rows: 0.1fr 0.3fr 0.3fr 0.7fr 0.1fr;
     background-color: black;
+    width: 100%;
+    height: 100%;
   }
     .kimImage {
       grid-area: image;
-      width: 30vw;
+      width: 100%;
       height: 40vh;
       margin: 5% 0 0 0;
     }
@@ -72,9 +76,9 @@
       text-align: center;
       display: flex;
       flex-flow: row wrap;
-      margin: 4% 0 0 27%;
-      width: 66vw;
-      font-size: 1.6em;
+      margin: 4% 0 0 10%;
+      width: 100%;
+      font-size: 1.4em;
     }
       .kimsName {
         font-size: 1em;
@@ -84,10 +88,10 @@
       .introductionText {
         grid-area: introText;
         text-align: center;
-        font-size: 1.4em;
+        font-size: 1.2em;
       }
     .ProjectsBlock {
-      width: 100vw;
+      width: 100%;
       height: 40vh;
       background-color: black;
       display: flex;
